--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Shadows+Into+Light" rel="stylesheet">
 </head>
 
-<body>
+<body class="index">
+  <header class="header">
+    <h1 class="text-imp-1">documented learning</h1>
+    <div class="links">
+      <a class="text-imp-1" href="index.html">fall 2017 blog</a>
+      <a class="text-imp-1" href="subpage.html">about the author</a>
+      <a class="text-imp-1" href="#">sandbox</a>
+    </div>
+  </header>
+  <section class="body">
+    <p class="text-imp-1">monday, january 8th,2018</p>
+    <h1 class="text-imp-1">week one review of first semester</h1>
+    <p class="text-1">Bulbasaur Ivysaur Venusaur Charmander Charmeleon Charizard Squirtle Wartortle Blastoise Caterpie Metapod Butterfree Weedle Kakuna Beedrill Pidgey Pidgeotto Pidgeot Rattata Raticate Spearow Fearow Ekans Arbok Pikachu Raichu Sandshrew Sandslash Nidoran
+      Nidorina Nidoqueen Nidoran Nidorino Nidoking Clefairy Clefable Vulpix Ninetales Jigglypuff Wigglytuff Zubat Golbat Oddish Gloom Vileplume Paras Parasect Venonat Venomoth Diglett Dugtrio Meowth Persian Psyduck Golduck Mankey Primeape Growlithe Arcanine
+      Poliwag Poliwhirl Poliwrath Abra Kadabra Alakazam Machop Machoke Machamp Bellsprout Weepinbell Victreebel Tentacool Tentacruel Geodude Graveler Golem Ponyta Rapidash Slowpoke Slowbro Magnemite Magneton Farfetch?d Doduo Dodrio Seel Dewgong Grimer
+      Muk Shellder Cloyster Gastly Haunter Gengar Onix Drowzee Hypno Krabby Kingler Voltorb Electrode Exeggcute Exeggutor Cubone Marowak Hitmonlee Hitmonchan Lickitung Koffing Weezing Rhyhorn Rhydon Chansey Tangela Kangaskhan Horsea Seadra Goldeen Seaking
+      Staryu Starmie Mr. Mime Scyther Jynx Electabuzz Magmar Pinsir Tauros Magikarp Gyarados Lapras Ditto Eevee Vaporeon Jolteon Flareon Porygon Omanyte Omastar Kabuto Kabutops Aerodactyl Snorlax Articuno Zapdos Moltres Dratini Dragonair Dragonite Mewtwo
+      mew
+    </p>
+  </section>
+  <aside class="aside">
+    <div class="line">
 
+    </div>
+    <h1 class="text-imp-1">categories</h1>
+    <a class="text-1" href="#">html</a>
+    <a class="text-1" href="#">css</a>
+    <a class="text-1" href="#">database</a>
+    <a class="text-1" href="#">php</a>
+    <a class="text-1" href="#">ruby</a>
+    <a class="text-1" href="#">back end development</a>
+    <a class="text-1" href="#">agile</a>
+    <a class="text-1" href="#">self taught</a>
+  </aside>
 </body>
 
 </html>
