--- a/subpage.html
+++ b/subpage.html
@@ -4,10 +4,46 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Shadows+Into+Light" rel="stylesheet">
 </head>
 
-<body>
+<body class="about">
+  <header class="header">
+    <h1 class="text-imp-1">documented learning</h1>
+    <div class="links">
+      <a class="text-imp-1" href="index.html">fall 2017 blog</a>
+      <a class="text-imp-1" href="subpage.html">about the author</a>
+      <a class="text-imp-1" href="#">sandbox</a>
+    </div>
+  </header>
+  <section class="body">
+    <h1 class="text-imp-1">about the author</h1>
+    <h1 class="text-imp-1">Gesamel Cardona</h1>
+    <img class="img" src="images/img1.jpeg" alt="">
+    <p class="text-1">Treecko Grovyle Sceptile Torchic Combusken Blaziken Mudkip Marshtomp Swampert Poochyena Mightyena Zigzagoon Linoone Wurmple Silcoon Beautifly Cascoon Dustox Lotad Lombre Ludicolo Seedot Nuzleaf Shiftry Taillow Swellow Wingull Pelipper Ralts Kirlia
+      Gardevoir Surskit Masquerain Shroomish Breloom Slakoth Vigoroth Slaking Nincada Ninjask Shedinja Whismur Loudred Exploud Makuhita Hariyama Azurill Nosepass Skitty Delcatty Sableye Mawile Aron Lairon Aggron Meditite Medicham Electrike Manectric Plusle
+      Minun Volbeat Illumise Roselia Gulpin Swalot Carvanha Sharpedo Wailmer Wailord Numel Camerupt Torkoal Spoink Grumpig Spinda Trapinch Vibrava Flygon Cacnea Cacturne Swablu Altaria Zangoose Seviper Lunatone Solrock Barboach Whiscash Corphish Crawdaunt
+      Baltoy Claydol Lileep Cradily Anorith Armaldo Feebas Milotic Castform Kecleon Shuppet Banette Duskull Dusclops Tropius Chimecho Absol Wynaut Snorunt Glalie Spheal Sealeo Walrein Clamperl Huntail Gorebyss Relicanth Luvdisc Bagon Shelgon Salamence
+      Beldum Metang Metagross Regirock Regice Registeel Latias Latios Kyogre Groudon Rayquaza Jirachi Deoxys</p>
+  </section>
+  <aside class="aside">
+    <div class="line">
 
+    </div>
+    <div class="sepr">
+      <h1 class="text-imp-1">categories</h1>
+      <a class="text-1" href="#">html</a>
+      <a class="text-1" href="#">css</a>
+      <a class="text-1" href="#">database</a>
+      <a class="text-1" href="#">php</a>
+      <a class="text-1" href="#">ruby</a>
+      <a class="text-1" href="#">back end development</a>
+      <a class="text-1" href="#">agile</a>
+      <a class="text-1" href="#">self taught</a>
+    </div>
+  </aside>
 </body>
 
 </html>
