--- a/subpage2.html
+++ b/subpage2.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>bio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Shadows+Into+Light" rel="stylesheet">
 </head>
 
 <body>
